--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Welcome to Lala Hashim’s portfolio. Explore projects in web development." />
+    <meta name="description" content="Welcome to Lala Hashim’s portfolio — featuring frontend and web development projects built from scratch." />
     <title>Lala Hashim</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
